--- a/minesweeper/package.json
+++ b/minesweeper/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack --mode development",
-    "watch": "webpack --mode development --watch"
+    "watch": "webpack --mode development --watch",
+    "build": "webpack"
   },
   "author": "Yauheni Baltsevich <norcobeatz@gmail.com>",
   "license": "ISC",
